package dropbot_dx;

message Config {
  /* # Configuration structure #
   *
   * This structure contains fields that can easily be updated through the
   * `update_config` method, and saved across device resets (i.e., in
   * persistent memory, such as EEPROM) using the `save_config` method.
   *
   * Field numbers 1-49 reserved for base-node-rpc standard fields.
   *
   * This makes it possible for clients/devices based on the base-node-rpc
   * package to interface with each other. */
  optional uint32 serial_number = 1;
  optional uint32 baud_rate = 2 [default = 115200];
  optional uint32 i2c_address = 3;

  /* Start new fields below.
   * For example:
   *
   *      optional float my_float_field = 50;
   *      optional int32 my_int_field = 51;
   */
  optional uint32 engaged_angle = 50 [default = 75];
  optional uint32 disengaged_angle = 51 [default = 103];
  optional bool light_override_enabled = 52 [default = false];
}


message State {
  /* # State structure #
   *
   * This structure contains fields that can easily be updated through the
   * `update_state` method, but are *not* saved across device resets (i.e., are
   * only stored in RAM). */
  optional bool magnet_engaged = 1 [default = false];
  optional bool light_enabled = 2 [default = false];
}
